cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             tiwwi
maintainer:         git-dev@mojo.rip
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Day01, Day02, Day03, Day04, Day05,
                      Day06, Day07, Day08, Day09, Day10,
                      Day11, Day12, Day13, Day14, Day15,
                      Day16, Day17, Day18, Day19, Day20,
                      Day21, Day22, Day23, Day24, Day25
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc2023
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        aoc2023

    hs-source-dirs:   app
    default-language: GHC2021

test-suite aoc2023-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        aoc2023
