cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      git-dev@mojo.rip
author:          tiwwi
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Day01, Day02, Day03, Day04, Day05,
        Day06, Day07, Day08, Day09, Day10,
        Day11, Day12, Day13, Day14, Day15,
        Day16, Day17, Day18, Day19, Day20,
        Day21, Day22, Day23, Day24, Day25,

    other-modules: Helpers
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base,
        text,
        array ^>=0.5.6.0,
        containers,
        attoparsec,
        vector,
        utility-ht,
        linear,
        lens,
        split,
        transformers,
        pqueue,
        mtl,
        union-find,
        random,

executable aoc2023
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base,
        time,
        deepseq,
        aoc2023

test-suite aoc2023-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base,
        aoc2023,
        tasty,
        tasty-hunit,
        filepath,

